scroll overflow fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,7 @@ $font-size-default-mobile: 22px;
 }
 
 p {
-    font-size: 110%;
+    font-size: 1.1em;
 }
 
 html,
